--- a/homework2/README
+++ b/homework2/README
@@ -5,3 +5,6 @@ In homework2, I implemented a perceptron decoder using PyTorch. The implementati
 3. I define the transmission and emission matrix and leverage PyTorch matrix operation to improve the speed (Line 86). By computing the inner loop (T') with matrix operation, the inference speed becomes pretty fast.
 
 The accuracy on the test file is 94.45%, which matches homework1. The running time is 2:45 mins. However, the inference speed can be further improved by computing the second loop with matrix operations.
+
+The command for running the perceptron decoder is
+python ./hw1.py weights data
