--- a/homework3/README
+++ b/homework3/README
@@ -5,6 +5,7 @@ In homework3, I implemented the CRF training. Specifically,
 - To avoid overfitting, I additionally added a small l1 regularization on the transmission and emission matrices:
    l1_loss = l1_weight * (|transmission|_1 + |emission|_1)
 - To get some inturation on to which extend training would help, I generated a fixed transmission and emission matrices using the expected word count on training data to compute the accuracy. Results shows that training can improve accuracy from the expected word cound method from 92.181% to 94.052%.
+- The code is efficient and the training takes 8.5 mins to reach the accuracy of 94.052% on test set
 
 Other implementation details include:
 - forward and backward pass is implemented via batched operations. I also optimized the speed by using only 1 for loop to compute the entire alpha (Line 124) and beta (Line 131). Furthermore, I compute the logarithm of alpha and beta instead of the plain probability to improve numerical stadiblity. The update computation is based on the torch.logsumexp() function and other matrix operations.
